kubernetes/apps/networking/traefik/dashboard/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: &href https://traefik.local.${SECRET_DOMAIN}
    gethomepage.dev/description: "Ingress & Service Management"
    gethomepage.dev/group: Networking
    gethomepage.dev/icon: traefik
    gethomepage.dev/name: Traefik
    gethomepage.dev/pod-selector: app.kubernetes.io/name=traefik
    gethomepage.dev/widget.type: traefik
    gethomepage.dev/widget.url: *href
    gethomepage.dev/app: traefik
    gethomepage.dev/siteMonitor: *href

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.local.${SECRET_DOMAIN}`)
      services:
        - kind: TraefikService
          name: api@internal
          #port: 9000
      middlewares:
        - name: secure-networks
          namespace: networking
  tls:
    secretName: traefik-tls-production
